# qt-chat-app

./: .clangd  .dockerignore  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  Justfile  README.md  README_RU.md  docker-compose.yml
.github/workflows/: cmake-target-build.yml  publish-doxygen.yml
client/: CMakeLists.txt
client/src/: AccountManager.cpp  AccountManager.h  Chat.cpp  Chat.h  ChatManager.cpp  ChatManager.h  ChatMessage.cpp  ChatMessage.h  ChatWindow.cpp  ChatWindow.h  Client.cpp  Client.h  Hasher.cpp  Hasher.h  MessageSender.cpp  MessageSender.h  RequestManager.cpp  RequestManager.h  UserResolver.cpp  UserResolver.h  main.cpp
client/src/ui/: AccountWindow.qml  ChatBox.qml  ChatCard.qml  ChatMessage.qml  ChatSelectionPanel.qml  ChatWindow.qml  ConnectionPanel.qml  ConnectionWindow.qml  LoginPanel.qml  Main.qml  ProfilePanel.qml  RegisterPanel.qml  StatusIndicator.qml
docs/architecture/: client.puml  server.puml  shared.puml
examples/: db_example.cpp  test_example.cpp
migrations/: 001_create_users.sql  002_create_content.sql  003_create_chats.sql  004_create_messages.sql  005_trigger_set_messages_updated_at.sql  006_trigger_check_chat_exists.sql  007_search_messages.sql  008_create_or_get_private_chat.sql  009_create_user_stats.sql  010_user_stats_triggers.sql
scripts/: devshell.bat
server/: CMakeLists.txt
server/src/: ClientConnection.cpp  ClientConnection.h  ConsoleReader.cpp  ConsoleReader.h  Database.cpp  Database.h  Database_BACKUP_1499.h  Database_LOCAL_1499.h  Database_REMOTE_1499.h  Middleware.cpp  Middleware.h  Model.cpp  Model.h  Server.cpp  Server.h  TcpServer.cpp  TcpServer.h  UserConnection.cpp  UserConnection.h  main.cpp  middleware.cpp  middleware.h  model.cpp  model.h
server/src/model/: Chat.cpp  Chat.h  ChatMember.cpp  ChatMember.h  Content.cpp  Content.h  DbMessage.cpp  DbMessage.h  User.cpp  User.h  UserStats.cpp  UserStats.h
shared/: CMakeLists.txt
shared/src/: AuthInfo.cpp  AuthInfo.h  KeyStore.cpp  KeyStore.h  Message.cpp  Message.h  OperationResult.cpp  OperationResult.h  Packet.cpp  Packet.h  Packet.h.autosave  PacketFactory.cpp  PacketFactory.h  ProfileInfo.h  ProfileUpdateInfo.cpp  Result.cpp  Result.h  ResultInfo.cpp  ResultInfo.h  util.cpp  util.h  utilus.cpp  utilus.h
shared/src/dto/: AuthInfo.h  ChatInfo.cpp  ChatInfo.h  ChatsInfo.cpp  ChatsInfo.h  CreateChatInfo.cpp  CreateChatInfo.h  ProfileInfo.cpp  ProfileUpdateInfo.h  PublicUserInfo.cpp  PublicUserInfo.h
src/client/: main.cpp
